--- a/src/app/fcomponents/pages/faq/faq.component.html
+++ b/src/app/fcomponents/pages/faq/faq.component.html
@@ -1,10 +1,17 @@
 <!-- header bit -->
-<header>
+<!-- <header>
   <div class="jumbotron-fluid">
     <h1 class="j1">Frequently Asked Questions</h1>
   </div>
-</header>
+</header> -->
 
+<div class="container-fluid faqImg">
+  <div class="container">
+    <div class="row my-5"> &nbsp;</div>
+      <div class="row my-5"><div class="col-12  text-center l1" style="color: white">Frequently Asked Questions</div></div>
+      <div class="row my-5"> &nbsp;</div>
+  </div>
+</div>
 <!-- accordion bit -->
 <div class="container">
   <div id="panel panel-default">
