--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 
-<app-homepage> </app-homepage> 
+<app-faq> </app-faq> 
+
 <router-outlet></router-outlet>
