--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
 
 <!-- top img -->
-<div class="row">
-  <div class="col-12"  style="background-repeat: no-repeat; background-image: url(https://www.thebigletterco.com.au/wp-content/uploads/2017/11/slide-bg-01.jpg); background-size: cover; background-position: center center;width: 100%; height: 100%; opacity: 1; visibility: inherit;z-index: 20;">
+<div class="row ">
+  <div class="col-12 back1">
     <div class='container'>
       <div class="row homeTopLogo1 text-center"> <div class="col-12"><img src=" https://www.thebigletterco.com.au/wp-content/uploads/2015/03/logo-white.png"></div></div>
       <div class="row homeTopLogo2 pb-5 text-center"><div class="col-12"> <img src="https://www.thebigletterco.com.au/wp-content/uploads/2015/04/MelbournesLeading-02-on.png" ></div> </div>
