--- a/src/app/fcomponents/pages/faq/faq.component.html
+++ b/src/app/fcomponents/pages/faq/faq.component.html
@@ -8,7 +8,7 @@
 <div class="container-fluid faqImg">
   <div class="container">
     <div class="row my-5"> &nbsp;</div>
-      <div class="row my-5"><div class="col-12  text-center l1" style="color: white">Frequently Asked Questions</div></div>
+      <div class="row my-5"><div class="col-12  text-center j1">Frequently Asked Questions</div></div>
       <div class="row my-5"> &nbsp;</div>
   </div>
 </div>
