--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* color theme:gold */
-/* #b2823f */
+/* #c48f45 */
 
 
 /* nav bar style start */
 
 
  /* General Font style Section Start */
- .j1{
-    font-size:50px;
-    font-weight: bold;
-    color:white;
-}
-.j2{
+.j1{
     font-size:40px;
     font-weight: bold;
     color:white;
@@ -21,7 +16,7 @@
 
 @media (max-width: 576px) {
     .j1{
-        font-size:40px;
+        font-size:32px;
     }
 }
 @media (max-width: 576px) {
@@ -63,27 +58,22 @@
     color:#424242;
     font-weight: bold;
 }
-.s2blue{
-    color:#b2823f;
+.s2gold{
+    color:#c48f45;
     font-size: 15px;
 }
 .s3{
     font-size:14px;
     color:#424242;
 }
-.s3Blue{
+.s3gold{
     font-size: 14px;
-    color:#0099FF;
+    color:#c48f45;
 }
 .s3bold{
     font-size:13px;
     color:#4b4b4b;
     font-weight: bold;
-}
-.s4{
-    font-size: 12px;
-    color:#424242;
-    font-weight: normal;
 }
 s4{
     font-size:13px;
