--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -16,7 +16,7 @@
   <div style="background-image: url(https://www.thebigletterco.com.au/wp-content/uploads/2013/10/logo-watermark-02.png);background-size: cover; background-position: center center;width: auto; height: 100%; opacity: 1;">
       <div class="container my-5 border-top pt-5"> <div class="row mt-5 productsOverview"><div class=' col-sm-12 col-md-3' *ngFor="let product of products"><img src={{product.imgLink}} title={{productName}}></div></div>
       </div>
-      <div class="row justify-content-md-center my-5"> <div class="col-12 text-center"><button type="button" class="btn btn-secondary">View our products</button></div>
+      <div class="row justify-content-md-center my-5"> <div class="col-12 text-center"><button type="button" class="btn btn-outline-gold">View our products</button></div>
       </div>
   </div>
 <!-- icons -->
