--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!-- <app-navbar></app-navbar> -->
 
-<app-faq> </app-faq> 
+<app-contactUs> </app-contactUs> 
 
 <router-outlet></router-outlet>
