--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -1,3 +1,12 @@
-<p>
-  productList works!
-</p>
+<div class="container-fluid">
+
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-6">testing-01</div>
+    <div class="col-6">testing-02</div>
+    <div class="col-6">testing-03</div>
+    <div class="col-6">testing-04</div>
+    <div class="col-6">testing-05</div>
+  </div>
+</div>
