--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<!-- <app-navbar></app-navbar> -->
+<app-navbar></app-navbar>
 
-<app-contactUs> </app-contactUs> 
+<!-- <app-productList> </app-productList>  -->
 
 <router-outlet></router-outlet>
