--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -6,16 +6,19 @@
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto ">
       <li class="nav-item active">
-        <a class="nav-link s2gold" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link s2gold" routerLink='/homepage' routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" routerLink ='/aboutUs' routerLinkActive="active">About Us</a>
         </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">FAQ</a>
+        <a class="nav-link" routerLink ='/faq' routerLinkActive="active">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Contact Us</a>
+        <a class="nav-link" routerLink='/contactUs' routerLinkActive="active">Contact Us</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink='/products' routerLinkActive="active">Products</a>
       </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
