--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -1,8 +1,11 @@
-<div class="container-fliud">google maps</div>
+<div class="container-fliud ">
+ <img src="assets/images/location.PNG" style="width:100%;overflow: hidden;"/>
+</div>
+
 <div class="container">
-  <div class="row">
+  <div class="row py-5">
     <!-- facebook -->
-    <div class="col-4">
+    <div class="col-12 col-md-4">
       <div class="l2">Get Social</div>
       <div class="row"><div class="col-4"><i class="fab fa-facebook-square"></i></div><div class="col-4"><i class="fab fa-instagram"></i></div></div>
       <div class="l2">Contact Info</div>
@@ -12,11 +15,11 @@
     </div>
 
     <!-- form -->
-    <div class="col-8">
-      <div class="row l1">Get in touch with us</div>
+    <div class="col-12 col-md-8">
+      <div class="row l2">Get in touch with us</div>
       <form class="col-12" novalidate #f="ngForm" (ngSubmit)="onSubmit(f)" style="padding-left:0;">
         <div class="row">
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <!-- name -->
               <div class="form-group">  
                   <div class="invalid_feedback" *ngIf="name.errors?.required && name.touched">Please enter your name</div>
@@ -55,10 +58,16 @@
                 </mat-form-field>
               </div>
               <!-- location of event -->
-              <div><input type="text" placeholder="Location of event *"></div>      
+              <div class="form-group">  
+                <div class="invalid_feedback" *ngIf="locationOfEvent.errors?.required && locationOfEvent.touched">Location is required</div>
+                <input class="form-control" type="locationOfEvent" required name="locationOfEvent" placeholder="Location of event *"
+                [ngClass]="{'is-invalid':locationOfEvent.errors?.required && locationOfEvent.touched}" [(ngModel)]="contactFrom.locationOfEvent" #locationOfEvent="ngModel">
+             </div>
+
+
           </div>
 
-          <div class="col-6">
+          <div class="col-12 col-md-6">
             <!-- how do you find use -->
             <div class="form-group">  
                 <div class="invalid_feedback" *ngIf="findUs.errors?.required && findUs.touched">Field is required</div>              
@@ -80,9 +89,7 @@
                         <option value="2">Two</option>
                         <option value="3">Three</option>
                       </select>
-                 </div>
-
-                 
+                 </div>             
                 <!-- message -->
                 <div class="form-group">  
                     <div class="invalid_feedback" *ngIf="message.errors?.required && message.touched">Message is required</div>
@@ -90,12 +97,14 @@
                        Message shall be at least 4 characters
                     </div>
                     <input class="form-control" type="message" required minlength="2" name="message" placeholder="message *"
-                    [ngClass]="{'is-invalid':message.errors?.required && message.touched}" [(ngModel)]="contactFrom.message" #message="ngModel">
+                    [ngClass]="{'is-invalid':message.errors?.required && message.touched}" [(ngModel)]="contactFrom.message" #message="ngModel" style="height: 170px;">
                  </div>
+                 <div>{{feedback_message}}</div>
           </div>
         </div>
 
       </form>
+      <div class="row"><div class="col-12 text-center"><button class="btn btn-outline-gold" (click) = "onSubmit" >Submit</button></div></div>
     </div>
 
     </div>
