--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -6,7 +6,7 @@
     <div class='container'>
       <div class="row homeTopLogo1 text-center"> <div class="col-12"><img src=" https://www.thebigletterco.com.au/wp-content/uploads/2015/03/logo-white.png"></div></div>
       <div class="row homeTopLogo2 pb-5 text-center"><div class="col-12"> <img src="https://www.thebigletterco.com.au/wp-content/uploads/2015/04/MelbournesLeading-02-on.png" ></div> </div>
-      <div class="row homeTopLogo3 text-center"><div class="col-12 mb-5" ><span>Letter & Event Hire Company</span> </div>
+      <div class="row text-center"><div class="col-12 mb-5" ><span class="j1">Letter & Event Hire Company</span> </div>
     </div>
       </div>
     </div>
