--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 
  /* General Font style Section Start */
 .j1{
-    font-size:40px;
+    font-size:4.5vw;
     font-weight: bold;
     color:white;
 }
