adjusted about us page layout

--- a/src/app/fcomponents/pages/aboutUs/aboutUs.component.html
+++ b/src/app/fcomponents/pages/aboutUs/aboutUs.component.html
@@ -1,3 +1,49 @@
-<p>
-  aboutUs works!
-</p>
+<section id="section1">
+    <br><br><br><br>
+    <div class="container jumbotronTitle" style="text-align: center" >
+        <b class="j1">About Us</b>
+    </div>
+  </section>
+<!----------------section1--------------------------------------------------->
+<section id="section2">
+  <div class="container">
+    <br>
+    <h1 class="s2">
+      Here at The Big Letter Co. we add that much needed sparkle to your party or event. 
+      Our stunning illuminated letters will bring a unique flair that will look fabulous in 
+      pictures and stay etched in people’s minds for a long time to come.
+    </h1>
+    <br>
+    <h1 class="s2">
+      We take pride in what we do and want to get it just right. We will work closely with you, 
+      your event organiser, your florist and even your stylist if you want us to. We are dedicated  
+      and will work tirelessly to create your vision and make your illuminated masterpiece come to life.
+    </h1>
+    <br>
+    <div style="margin: 2.5rem 0;">
+      <hr>
+    </div>
+    <div class="row">
+      <div class="col-md-8" >
+          <i class="fa fa-star" style="color:#b2823f;font-size: 40px;"><a class="l1" style="color:black;padding-left: 20px;">Our Service</a></i>
+          <br><br>
+          <ul>
+            <li><h1 class="s2">We offer a large range of freestanding illuminated letters, numbers, giant words and light boxes suited specifically to your event.</h1></li>
+            <li><h1 class="s2">We can deliver anywhere across Melbourne and set things up, well in time for your party to kick off – just let us know details and we will make it happen.</h1></li>
+            <li><h1 class="s2">We will liaise directly with your venue or event manager to arrange setup times and logistics.</h1></li>
+            <li><h1 class="s2">Call us for a free consultation about your requirements, or just for some inspiration – we are always happy to discuss ideas with you.</h1></li>
+            <li><h1 class="s2">Do you need something different to what you have seen on our website? Just ask us. We are always striving to meet our customer’s needs, and will do everything possible to make sure you get what you want.</h1></li>
+          </ul>
+          <br>
+          <h1 class="s2">To avoid disappointment, please make sure you contact us at least one month in advance for your letter requirements.</h1>
+          <br>
+          <h1 class="s2">Whether your party is a huge corporate event or small private party, The Big Letter Co. guarantees you will get the same five star service. Every customer is a star to us, and deserves to have their event sparkle with our unique illuminated letters.</h1>
+          <br>
+        </div>
+
+      <div class="col-md-4">
+          <img class="about-us-side-image" src="../../../../assets/images/about-us.jpg" >
+      </div>
+    </div>
+  </div>
+</section>
