adjusted footer layout

--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -1,25 +1,29 @@
 <div class="footertop">
   <div class="container">
-    <div class="row">
+    <div class="row" style="text-align:center">
       <div class="col-md-4">
         <br>
-        <div class="icon">
-          <i class="fas fa-envelope"></i>
-        </div>
-        <div class="icon">
-          <i class="fab fa-facebook-f"></i>
-        </div>
-        <div class="icon">
-          <i class="fab fa-instagram"></i>
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col-3 ">
+            <i class=" icon fas fa-envelope"></i>
+          </div>
+          <div class="col-3 ">
+              <i class="icon fab fa-facebook-f"></i>
+          </div>
+          <div class="col-3 ">
+              <i class="icon fab fa-instagram"></i>
+          </div>
+          <div class="col-2"></div>
         </div>
       </div>
 
-      <div class="col-md-4" style="text-align:center">
+      <div class="col-md-4" >
         <br>
         <a class="phonenumber">Call Us: 1300 001 802</a>
       </div>
 
-      <div class="col-md-4" style="text-align:center">
+      <div class="col-md-4" >
         <br>
         <button class="contectus_btn" style="text-decoration: none;"  type="button" name="button"  >Contect Us</button>
       </div>
