hire/service/package

--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -1,4 +1,5 @@
 <div class="container-fliud ">
+  <div class="row py-3">&nbsp;</div>
  <img src="assets/images/location.PNG" style="width:100%;overflow: hidden;filter: brightness(90%);"/>
 </div>
 
