--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -1,12 +1,24 @@
 <nav class="navbar navbar-expand-md" id="navbarId" [ngClass]="{'navbar-light': !isTop, 'bg-light':!isTop}">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" routerLink='/homepage' routerLinkActive="active">HomeLogo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav ml-auto ">
-      <li class="nav-item active">
+      <!-- <li class="nav-item active">
         <a class="nav-link s2gold" routerLink='/homepage' routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
+      </li> -->
+      
+      <!-- https://blog.csdn.net/zhuxufeifei/article/details/83065034 -->
+
+      <li class="nav-item">
+        <a class="nav-link" routerLink='/hire' routerLinkActive="active">Hire</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink='/services' routerLinkActive="active">Party Services</a>
+      </li>
+      <li class="nav-item">
+          <a class="nav-link" routerLink='/packages' routerLinkActive="active">Party Packages</a>
       </li>
       <li class="nav-item">
           <a class="nav-link" routerLink ='/aboutUs' routerLinkActive="active">About Us</a>
@@ -16,19 +28,6 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink='/contactUs' routerLinkActive="active">Contact Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink='/products' routerLinkActive="active">Products</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown link
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
       </li>
     </ul>
   </div>
