--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -12,10 +12,11 @@
       <div class="col-12 text-center">All prices are in AUD. Damage waiver, delivery & pick up fees are additional</div>
   </div>
 
-
+  <div class="row"><div class="col-12 col-md-6 s2bold" *ngIf="!allProducts || allProducts.length ==0">Sorry, We can not find any products at this moment.</div></div>
   <div class="row py-5">
     <div class='col-12 col-md-6 text-center' *ngFor="let product of allProducts">
       <div class="l1">{{product.Title}}</div>
+      <div>{{product.ProdTypeId}}</div>
       <div>{{product.SubTitle}}</div>
       <div>{{product.Description}}</div>
       <div>ProductCategoryName:{{product.CategroyName}}</div>
