--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -20,12 +20,12 @@
 
       <div class="col-md-4" >
         <br>
-        <a class="phonenumber">Call Us: 1300 001 802</a>
+        <div class="s2gold">Call Us: 1300 001 802</div>
       </div>
 
       <div class="col-md-4" >
         <br>
-        <button class="contectus_btn" style="text-decoration: none;"  type="button" name="button"  >Contect Us</button>
+        <button class="btn btn-outline-gold" routerLink='/contactUs' routerLinkActive="active"  type="button" name="button"  >Contact Us</button>
       </div>
     </div>
   </div>
