--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -1,6 +1,10 @@
 <div class="container-fluid productsBackImg" >
   <div class="row py-5"> &nbsp;</div>
-  <div class="row py-5"><div class="col-12 text-center j1 my-5">Our products</div></div>
+  <div class="row py-5">
+    <div class="col-12 text-center j1 my-5" *ngIf="typeName == 'service'">Our Services</div>
+    <div class="col-12 text-center j1 my-5" *ngIf="typeName == 'hire'">Our Hires</div>
+    <div class="col-12 text-center j1 my-5" *ngIf="typeName == 'package'">Our Packages</div>
+  </div>
   <div class="row my-5"> &nbsp;</div>
 </div>
 
@@ -8,13 +12,39 @@
   <div class="row py-3">
       <div class="col-12 text-center">
           Bringing your party vision to life can be exhausting, so we aim to be there with you as much as you need. If you have a clear idea already, that’s great. If not, we can help bring the wow factor to your event like never before. Contact us to talk over details and receive a quote.</div>
-      <div class="col-12 mb-2 l1 text-center">  Our Products</div>
+      <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'hire'">  Our Hires</div>
+      <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'service'">  Our Services</div>
+      <div class="col-12 mb-2 l1 text-center" *ngIf="typeName == 'package'">  Our Packages</div>
+
       <div class="col-12 text-center">All prices are in AUD. Damage waiver, delivery & pick up fees are additional</div>
   </div>
 
   <div class="row"><div class="col-12 col-md-6 s2bold" *ngIf="!allProducts || allProducts.length ==0">Sorry, We can not find any products at this moment.</div></div>
   <div class="row py-5">
     <div class='col-12 col-md-6 text-center' *ngFor="let product of allProducts">
+
+        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" data-interval="3000">
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="http://localhost:56662/ImgTest/test1.png" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="http://localhost:56662/ImgTest/test2.jpeg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="http://localhost:56662/ImgTest/test3.jpeg" class="d-block w-100">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
       <div class="l1">{{product.Title}}</div>
       <div>{{product.ProdTypeId}}</div>
       <div>{{product.SubTitle}}</div>
