--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -33,6 +33,6 @@
 <div class="footerbot">
   <div class="container">
     <br><br>
-    <p>The Big Letter Co. © 2017 All rights reserved |</p>
+    <p style="margin-bottom:0px;">The Big Letter Co. © 2017 All rights reserved |</p>
   </div>
 </div>
