--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -18,7 +18,7 @@
         </div>
       </div>
 
-      <div class="col-md-4" >
+      <div class="col-md-4" style="padding-top:10px;">
         <br>
         <div class="s2gold">Call Us: 1300 001 802</div>
       </div>
@@ -29,6 +29,7 @@
       </div>
     </div>
   </div>
+  <br>
 </div>
 <div class="footerbot">
   <div class="container">
