--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -11,31 +11,31 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav ml-auto ">
+  <div class="collapse navbar-collapse" style="height:60px;" id="navbarNavDropdown">
+    <ul class="navbar-nav ml-auto " style="height:100%">
       <!-- <li class="nav-item active">
         <a class="nav-link s2gold" routerLink='/homepage' routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
       </li> -->
       
       <!-- https://blog.csdn.net/zhuxufeifei/article/details/83065034 -->
 
-      <li class="nav-item">
-        <a class="nav-link" routerLink='/hire' routerLinkActive="active">Hire</a>
+      <li class="nav-item" >
+        <a class="nav-link s2" routerLink='/hire' routerLinkActive="active">Hire</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink='/services' routerLinkActive="active">Party Services</a>
+          <a class="nav-link s2" routerLink='/services' routerLinkActive="active">Party Services</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink='/packages' routerLinkActive="active">Party Packages</a>
+          <a class="nav-link s2" routerLink='/packages' routerLinkActive="active">Party Packages</a>
       </li>
       <li class="nav-item">
-          <a class="nav-link" routerLink ='/aboutUs' routerLinkActive="active">About Us</a>
+          <a class="nav-link s2" routerLink ='/aboutUs' routerLinkActive="active">About Us</a>
         </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink ='/faq' routerLinkActive="active">FAQ</a>
+        <a class="nav-link s2" routerLink ='/faq' routerLinkActive="active">FAQ</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink='/contactUs' routerLinkActive="active">Contact Us</a>
+        <a class="nav-link s2" routerLink='/contactUs' routerLinkActive="active">Contact Us</a>
       </li>
     </ul>
   </div>
